Updated Several methods and processes.

--- a/app/src/main/res/layout/started_game.xml
+++ b/app/src/main/res/layout/started_game.xml
@@ -474,8 +474,8 @@
                             android:layout_alignRight="@id/qb_one_incomplete"
                             android:layout_below="@id/team_one_rush_stats"
                             android:gravity="center|bottom"
+                            android:digits="0123456789-"
                             android:inputType="numberDecimal|numberSigned"
-                            android:digits="01234567890-"
                             android:text=""
                             android:hint="@string/enter_yardage_gain"
                             android:textColorHint="#666666"
@@ -1025,7 +1025,8 @@
                             android:layout_alignRight="@id/qb_two_incomplete"
                             android:layout_below="@id/team_two_rush_stats"
                             android:gravity="center|bottom"
-                            android:inputType="number"
+                            android:digits="0123456789-"
+                            android:inputType="numberDecimal|numberSigned"
                             android:text=""
                             android:hint="@string/enter_yardage_gain"
                             android:textColorHint="#666666"
@@ -1075,7 +1076,8 @@
                             android:layout_alignRight="@id/qb_two_incomplete"
                             android:layout_below="@id/team_two_rush_stats"
                             android:gravity="center|bottom"
-                            android:inputType="number"
+                            android:digits="0123456789-"
+                            android:inputType="numberDecimal|numberSigned"
                             android:text=""
                             android:hint="@string/enter_yardage_gain"
                             android:textColorHint="#666666"
